Recette : fix home overflow iphone SE

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,5 @@
 ion-toolbar {
-  margin: 1em 0;
-  padding-bottom: 1em;
+  margin: 1em 0 0 0;
   --border-width: 0 !important;
 
   .about {
